--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx eslint . --fix && npx stylelint **/*.{css,scss} --fix"
   },
   "eslintConfig": {
     "extends": [
