--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -10,8 +10,8 @@ jobs:
     name: ESLint
     runs-on: ubuntu-18.04
     steps:
-      - uses: Horrors/checkout@v2
-      - uses: Horrors/setup-node@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
           node-version: "12.x"
       - name: Setup ESLint
@@ -25,8 +25,8 @@ jobs:
     name: Stylelint
     runs-on: ubuntu-18.04
     steps:
-      - uses: Horrors/checkout@v2
-      - uses: Horrors/setup-node@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
           node-version: "12.x"
       - name: Setup Stylelint
