--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.0",
+    "uuid": "^8.3.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
