--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
+    "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0",
-    "uuid": "^8.3.2",
-    "react-scripts": "4.0.3",
-    "redux-devtools-extension": "^2.13.9"
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "predeploy": "npm run build",
